[gd_scene load_steps=16 format=3 uid="uid://d1ti0ps86yt0p"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_3jcof"]
[ext_resource type="Script" path="res://scripts/ui/inventory.gd" id="2_blooa"]
[ext_resource type="Texture2D" uid="uid://c4lbw0ps8gyvg" path="res://sprites/vaaben/ranged/bue/bue_idle.png" id="3_u6cls"]
[ext_resource type="Texture2D" uid="uid://cq483p68yt4ko" path="res://sprites/vaaben/melee/kniv/kniv_idle.png" id="4_efelt"]
[ext_resource type="Texture2D" uid="uid://dycs6u1lit6rn" path="res://sprites/vaaben/ranged/vand_stav/vand-stav_idle.png" id="5_mv4lq"]
[ext_resource type="Texture2D" uid="uid://j6xrn85xo2qb" path="res://sprites/vaaben/melee/hammer/hammer_idle.png" id="6_uk06u"]
[ext_resource type="Texture2D" uid="uid://dm2aj2nj5j6ua" path="res://sprites/vaaben/ranged/boomerang/bommerang_idle_angreb-1.png" id="7_pe4v2"]
[ext_resource type="Texture2D" uid="uid://t70iiylxcj63" path="res://sprites/vaaben/melee/skjold/skjold_idle.png" id="8_lqf4w"]
[ext_resource type="Texture2D" uid="uid://bdg2ds0brm88q" path="res://sprites/vaaben/ranged/ild_stav/ild-stav_idle.png" id="9_hfavo"]
[ext_resource type="Texture2D" uid="uid://bim84cp6kchdj" path="res://sprites/vaaben/ranged/is_kannon/is-kannon_idle.png" id="10_4dxx1"]
[ext_resource type="Texture2D" uid="uid://eoaedts82ej4" path="res://sprites/vaaben/melee/le/le_idle.png" id="11_pyufq"]
[ext_resource type="Texture2D" uid="uid://dkvlsoqapoya4" path="res://sprites/vaaben/ranged/rockguitar/rockguitar_idle.png" id="12_7wxm8"]
[ext_resource type="Script" path="res://scripts/ui/upgradetext.gd" id="13_qh4r3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlwpy"]
bg_color = Color(0.816006, 0.491452, 0.548551, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08qt5"]
bg_color = Color(0.315157, 0.677621, 0.572684, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3jcof")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 20

[node name="HealthBar" type="ProgressBar" parent="Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mlwpy")
theme_override_styles/fill = SubResource("StyleBoxFlat_08qt5")
rounded = true
metadata/_edit_use_anchors_ = true

[node name="AmmoPanel" type="Panel" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
mouse_filter = 2

[node name="AmmoLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/AmmoPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.5
offset_right = 56.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "ammo not set"

[node name="CoinsLabel" type="Panel" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
mouse_filter = 2

[node name="CoinsLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/CoinsLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("2_blooa")

[node name="Slot1" type="Panel" parent="Control/MarginContainer/Inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot2" type="Panel" parent="Control/MarginContainer/Inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot3" type="Panel" parent="Control/MarginContainer/Inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot4" type="Panel" parent="Control/MarginContainer/Inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot5" type="Panel" parent="Control/MarginContainer/Inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot6" type="Panel" parent="Control/MarginContainer/Inventory"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot7" type="Panel" parent="Control/MarginContainer/Inventory"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot8" type="Panel" parent="Control/MarginContainer/Inventory"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot9" type="Panel" parent="Control/MarginContainer/Inventory"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot10" type="Panel" parent="Control/MarginContainer/Inventory"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="WeaponIcons" type="Control" parent="Control/MarginContainer/Inventory"]
visible = false
layout_mode = 2

[node name="BasicBowIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("3_u6cls")

[node name="BasicKnifeIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("4_efelt")

[node name="WaterStaffIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("5_mv4lq")

[node name="KÃ¦mpeHammerIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("6_uk06u")

[node name="BoomerangIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("7_pe4v2")

[node name="SkjoldIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("8_lqf4w")

[node name="FireStaffIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("9_hfavo")

[node name="IsKanonIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("10_4dxx1")

[node name="LeIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("11_pyufq")

[node name="RockGuitarIcon" type="TextureRect" parent="Control/MarginContainer/Inventory/WeaponIcons"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("12_7wxm8")

[node name="EndScreenPanel" type="Panel" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/EndScreenPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="EndScreenContainer" type="VBoxContainer" parent="Control/EndScreenPanel/MarginContainer"]
layout_mode = 2

[node name="EndScreenTextLabel" type="Label" parent="Control/EndScreenPanel/MarginContainer/EndScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Game Over"

[node name="HighScoreLabel" type="Label" parent="Control/EndScreenPanel/MarginContainer/EndScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "High Score
"

[node name="RetryButton" type="Button" parent="Control/EndScreenPanel/MarginContainer/EndScreenContainer"]
process_mode = 3
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Retry"

[node name="QuitButton" type="Button" parent="Control/EndScreenPanel/MarginContainer/EndScreenContainer"]
process_mode = 3
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"

[node name="Upgradetext" type="RichTextLabel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 57.0
offset_bottom = 97.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 32
text = "HEJ"
scroll_active = false
script = ExtResource("13_qh4r3")

[connection signal="pressed" from="Control/EndScreenPanel/MarginContainer/EndScreenContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Control/EndScreenPanel/MarginContainer/EndScreenContainer/QuitButton" to="." method="_on_button_pressed"]
